src/test/ui/error-codes/E0152.stderr
error[E0152]: duplicate lang item found: `panic_fmt`.
  --> $DIR/E0152.rs:14:1
   |
14 | struct Foo; //~ ERROR E0152
   | ^^^^^^^^^^^
   |
   = note: first defined in crate `std`.

error: aborting due to previous error

